--- a/src/Nanophone.Core/Nanophone.Core.csproj
+++ b/src/Nanophone.Core/Nanophone.Core.csproj
@@ -56,6 +56,7 @@
     <Compile Include="RegistryInformation.cs" />
     <Compile Include="RegistryProviderExtensions.cs" />
     <Compile Include="ServiceRegistry.cs" />
+    <Compile Include="StringExtensions.cs" />
     <Compile Include="ThreadLocalRandom.cs" />
   </ItemGroup>
   <ItemGroup>
