--- a/src/SampleService.WebApi.SelfHost/SampleService.WebApi.SelfHost.csproj
+++ b/src/SampleService.WebApi.SelfHost/SampleService.WebApi.SelfHost.csproj
@@ -90,13 +90,13 @@
       <Project>{7b65db3f-d6f0-45b5-88b0-6691b672ca0c}</Project>
       <Name>Nanophone.Core</Name>
     </ProjectReference>
-    <ProjectReference Include="..\Nanophone.RegistryConsumer.WebApi\Nanophone.RegistryConsumer.WebApi.csproj">
-      <Project>{bacd33a7-a432-45c4-bfd2-9435f86dbf05}</Project>
-      <Name>Nanophone.RegistryConsumer.WebApi</Name>
+    <ProjectReference Include="..\Nanophone.RegistryHost.ConsulRegistry\Nanophone.RegistryHost.ConsulRegistry.csproj">
+      <Project>{1734B9D0-B55C-4E1C-A5B8-3EC234388E40}</Project>
+      <Name>Nanophone.RegistryHost.ConsulRegistry</Name>
     </ProjectReference>
-    <ProjectReference Include="..\Nanophone.RegistryProvider.ConsulRegistry\Nanophone.RegistryProvider.ConsulRegistry.csproj">
-      <Project>{02488857-3c88-4227-8524-62b463b62744}</Project>
-      <Name>Nanophone.RegistryProvider.ConsulRegistry</Name>
+    <ProjectReference Include="..\Nanophone.RegistryTenant.WebApi\Nanophone.RegistryTenant.WebApi.csproj">
+      <Project>{0FF76FE4-D61D-40F1-88E7-B4EC059FF2E7}</Project>
+      <Name>Nanophone.RegistryTenant.WebApi</Name>
     </ProjectReference>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
