--- a/src/Nanophone.Core/Nanophone.Core.csproj
+++ b/src/Nanophone.Core/Nanophone.Core.csproj
@@ -50,11 +50,11 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="DnsHelper.cs" />
-    <Compile Include="IRegistryConsumer.cs" />
-    <Compile Include="IRegistryProvider.cs" />
+    <Compile Include="IRegistryTenant.cs" />
+    <Compile Include="IRegistryHost.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="RegistryInformation.cs" />
-    <Compile Include="RegistryProviderExtensions.cs" />
+    <Compile Include="RegistryHostExtensions.cs" />
     <Compile Include="ServiceRegistry.cs" />
     <Compile Include="StringExtensions.cs" />
     <Compile Include="ThreadLocalRandom.cs" />
