--- a/src/Nanophone.RegistryHost.ConsulRegistry.Tests/Nanophone.RegistryHost.ConsulRegistry.Tests.csproj
+++ b/src/Nanophone.RegistryHost.ConsulRegistry.Tests/Nanophone.RegistryHost.ConsulRegistry.Tests.csproj
@@ -50,6 +50,7 @@
   <ItemGroup>
     <Compile Include="ConsulRegistryHostShould.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="StringExtensionsShould.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="packages.config" />
