--- a/src/Nanophone.RegistryTenant.WebApi/Nanophone.RegistryTenant.WebApi.csproj
+++ b/src/Nanophone.RegistryTenant.WebApi/Nanophone.RegistryTenant.WebApi.csproj
@@ -56,6 +56,7 @@
   </ItemGroup>
   <ItemGroup>
     <None Include="app.config" />
+    <None Include="Nanophone.RegistryTenant.WebApi.nuspec" />
     <None Include="packages.config" />
   </ItemGroup>
   <ItemGroup>
