replaced Common.Logging with LibLog

--- a/src/Nanophone.RegistryHost.ConsulRegistry/Nanophone.RegistryHost.ConsulRegistry.csproj
+++ b/src/Nanophone.RegistryHost.ConsulRegistry/Nanophone.RegistryHost.ConsulRegistry.csproj
@@ -30,14 +30,6 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <ItemGroup>
-    <Reference Include="Common.Logging, Version=3.3.1.0, Culture=neutral, PublicKeyToken=af08829b84f0328e, processorArchitecture=MSIL">
-      <HintPath>..\packages\Common.Logging.3.3.1\lib\net40\Common.Logging.dll</HintPath>
-      <Private>True</Private>
-    </Reference>
-    <Reference Include="Common.Logging.Core, Version=3.3.1.0, Culture=neutral, PublicKeyToken=af08829b84f0328e, processorArchitecture=MSIL">
-      <HintPath>..\packages\Common.Logging.Core.3.3.1\lib\net40\Common.Logging.Core.dll</HintPath>
-      <Private>True</Private>
-    </Reference>
     <Reference Include="Consul, Version=0.6.4.6, Culture=neutral, PublicKeyToken=20a6ad9a81df1d95, processorArchitecture=MSIL">
       <HintPath>..\packages\Consul.0.6.4.6\lib\net45\Consul.dll</HintPath>
       <Private>True</Private>
@@ -56,6 +48,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="App_Packages\LibLog.4.2\LibLog.cs" />
     <Compile Include="ConsulRegistryHost.cs" />
     <Compile Include="ConsulRegistryHostConfiguration.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
