--- a/src/Nanophone.Core/packages.config
+++ b/src/Nanophone.Core/packages.config
@@ -1,5 +1,4 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
-  <package id="Common.Logging" version="3.3.1" targetFramework="net452" />
-  <package id="Common.Logging.Core" version="3.3.1" targetFramework="net452" />
+  <package id="LibLog" version="4.2.5" targetFramework="net452" developmentDependency="true" />
 </packages>
