--- a/src/Nanophone.RegistryHost.ConsulRegistry/packages.config
+++ b/src/Nanophone.RegistryHost.ConsulRegistry/packages.config
@@ -1,7 +1,6 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
-  <package id="Common.Logging" version="3.3.1" targetFramework="net452" />
-  <package id="Common.Logging.Core" version="3.3.1" targetFramework="net452" />
   <package id="Consul" version="0.6.4.6" targetFramework="net452" />
+  <package id="LibLog" version="4.2.5" targetFramework="net452" developmentDependency="true" />
   <package id="Newtonsoft.Json" version="8.0.3" targetFramework="net452" />
 </packages>
