--- a/src/Nanophone.RegistryTenant.Nancy/Nanophone.RegistryTenant.Nancy.csproj
+++ b/src/Nanophone.RegistryTenant.Nancy/Nanophone.RegistryTenant.Nancy.csproj
@@ -30,12 +30,6 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <ItemGroup>
-    <Reference Include="Common.Logging">
-      <HintPath>..\packages\Common.Logging.3.3.1\lib\net40\Common.Logging.dll</HintPath>
-    </Reference>
-    <Reference Include="Common.Logging.Core">
-      <HintPath>..\packages\Common.Logging.Core.3.3.1\lib\net40\Common.Logging.Core.dll</HintPath>
-    </Reference>
     <Reference Include="Nancy">
       <HintPath>..\packages\Nancy.1.4.3\lib\net40\Nancy.dll</HintPath>
     </Reference>
@@ -49,6 +43,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="App_Packages\LibLog.4.2\LibLog.cs" />
     <Compile Include="NancyRegistryTenant.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="StatusModule.cs" />
