--- a/src/SampleService.Nancy/packages.config
+++ b/src/SampleService.Nancy/packages.config
@@ -2,4 +2,5 @@
 <packages>
   <package id="Nancy" version="1.4.3" targetFramework="net452" />
   <package id="Nancy.Hosting.Self" version="1.4.1" targetFramework="net452" />
+  <package id="NLog" version="4.3.4" targetFramework="net452" />
 </packages>
