--- a/src/SampleService.WebApi.SelfHost/packages.config
+++ b/src/SampleService.WebApi.SelfHost/packages.config
@@ -8,5 +8,6 @@
   <package id="Microsoft.Owin.Host.HttpListener" version="3.0.1" targetFramework="net452" />
   <package id="Microsoft.Owin.Hosting" version="3.0.1" targetFramework="net452" />
   <package id="Newtonsoft.Json" version="8.0.3" targetFramework="net452" />
+  <package id="NLog" version="4.3.4" targetFramework="net452" />
   <package id="Owin" version="1.0" targetFramework="net452" />
 </packages>
