--- a/src/Nanophone.RegistryTenant.Nancy/Nanophone.RegistryTenant.Nancy.nuspec
+++ b/src/Nanophone.RegistryTenant.Nancy/Nanophone.RegistryTenant.Nancy.nuspec
@@ -2,7 +2,7 @@
 <package>
   <metadata>
     <id>Nanophone.RegistryTenant.Nancy</id>
-    <version>1.0.0</version>
+    <version>$version$</version>
     <title>Nanophone Nancy registry tenant</title>
     <description>Nanophone Nancy registry tenant</description>
     <authors>Luk Vermeulen</authors>
