--- a/src/Nanophone.Core.Tests/Nanophone.Core.Tests.csproj
+++ b/src/Nanophone.Core.Tests/Nanophone.Core.Tests.csproj
@@ -4,14 +4,13 @@
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
-    <ProjectGuid>{7B65DB3F-D6F0-45B5-88B0-6691B672CA0C}</ProjectGuid>
+    <ProjectGuid>{795154EC-E723-47FB-A301-AC8FBE24218E}</ProjectGuid>
     <OutputType>Library</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>Nanophone.Core</RootNamespace>
-    <AssemblyName>Nanophone.Core</AssemblyName>
+    <RootNamespace>Nanophone.Core.Tests</RootNamespace>
+    <AssemblyName>Nanophone.Core.Tests</AssemblyName>
     <TargetFrameworkVersion>v4.5.2</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
-    <TargetFrameworkProfile />
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|AnyCPU' ">
     <DebugSymbols>true</DebugSymbols>
@@ -31,6 +30,10 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <ItemGroup>
+    <Reference Include="nunit.framework, Version=2.6.4.14350, Culture=neutral, PublicKeyToken=96d09a1eb7f44a77, processorArchitecture=MSIL">
+      <HintPath>..\packages\NUnit.2.6.4\lib\nunit.framework.dll</HintPath>
+      <Private>True</Private>
+    </Reference>
     <Reference Include="System" />
     <Reference Include="System.Core" />
     <Reference Include="System.Xml.Linq" />
@@ -41,20 +44,18 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="App_Packages\LibLog.4.2\LibLog.cs" />
-    <Compile Include="IRegistryTenant.cs" />
-    <Compile Include="IRegistryHost.cs" />
+    <Compile Include="StringExtensionsShould.cs" />
+    <Compile Include="UriExtensionsShould.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="RegistryInformation.cs" />
-    <Compile Include="RegistryHostExtensions.cs" />
-    <Compile Include="ServiceRegistry.cs" />
-    <Compile Include="StringExtensions.cs" />
-    <Compile Include="ThreadLocalRandom.cs" />
-    <Compile Include="UriExtensions.cs" />
   </ItemGroup>
   <ItemGroup>
-    <None Include="Nanophone.Core.nuspec" />
     <None Include="packages.config" />
+  </ItemGroup>
+  <ItemGroup>
+    <ProjectReference Include="..\Nanophone.Core\Nanophone.Core.csproj">
+      <Project>{7b65db3f-d6f0-45b5-88b0-6691b672ca0c}</Project>
+      <Name>Nanophone.Core</Name>
+    </ProjectReference>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
