--- a/src/Nanophone.RegistryHost.ConsulRegistry/Nanophone.RegistryHost.ConsulRegistry.csproj
+++ b/src/Nanophone.RegistryHost.ConsulRegistry/Nanophone.RegistryHost.ConsulRegistry.csproj
@@ -9,8 +9,9 @@
     <AppDesignerFolder>Properties</AppDesignerFolder>
     <RootNamespace>Nanophone.RegistryHost.ConsulRegistry</RootNamespace>
     <AssemblyName>Nanophone.RegistryHost.ConsulRegistry</AssemblyName>
-    <TargetFrameworkVersion>v4.5.2</TargetFrameworkVersion>
+    <TargetFrameworkVersion>v4.6.1</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
+    <TargetFrameworkProfile />
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|AnyCPU' ">
     <DebugSymbols>true</DebugSymbols>
@@ -54,7 +55,9 @@
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
-    <None Include="app.config" />
+    <None Include="app.config">
+      <SubType>Designer</SubType>
+    </None>
     <None Include="Nanophone.RegistryHost.ConsulRegistry.nuspec" />
     <None Include="packages.config" />
   </ItemGroup>
