--- a/appveyor.yml
+++ b/appveyor.yml
@@ -1,4 +1,7 @@
 version: 1.1.0.{build}
+branches:
+  only:
+  - master
 pull_requests:
   do_not_increment_build_number: true
 configuration: Release
