--- a/src/Nanophone.Core.Library/project.json
+++ b/src/Nanophone.Core.Library/project.json
@@ -12,22 +12,22 @@
     "xmlDoc": false
   },
 
-  "dependencies": {
-    "NETStandard.Library": "1.6.0"
-  },
-
   "frameworks": {
     "net451": { }, 
-    "netstandard1.5": {
-      "imports": "dnxcore50",
+    "netstandard1.3": {
       "dependencies": {
+        "NETStandard.Library": "1.6.0",
         "System.Diagnostics.StackTrace": "4.0.1",
-        "System.Runtime.InteropServices.RuntimeInformation": "4.0.0",
-        "Microsoft.CSharp": "4.0.1",
+        "System.Linq.Queryable": "4.0.1",
+        "System.Collections.Specialized": "4.0.1",
+        "System.ComponentModel.TypeConverter": "4.1.0",
         "System.Dynamic.Runtime": "4.0.11",
+        "Microsoft.CSharp": "4.0.1",
+        "System.Runtime.InteropServices.RuntimeInformation": "4.0.0",
         "System.Diagnostics.Tools": "4.0.1",
         "System.Linq.Expressions": "4.1.0",
-        "System.Text.RegularExpressions": "4.1.0"
+        "System.Text.RegularExpressions": "4.1.0",
+        "Consul": "0.6.4.7-alpha"
       }
     }
   }
