--- a/src/Nanophone.Core/project.json
+++ b/src/Nanophone.Core/project.json
@@ -26,7 +26,7 @@
         "System.Runtime.InteropServices.RuntimeInformation": "4.0.0",
         "System.Diagnostics.Tools": "4.0.1",
         "System.Linq.Expressions": "4.1.0",
-        "System.Text.RegularExpressions": "4.1.0",
+        "System.Text.RegularExpressions": "4.1.0"
       }
     },
     "netcoreapp1.0": {
