--- a/src/Nanophone.Core/project.json
+++ b/src/Nanophone.Core/project.json
@@ -1,11 +1,8 @@
 ﻿{
   "title": "Nanophone.Core",
-  "version": "1.0.0-*",
+  "version": "1.0.0",
 
   "buildOptions": {
-    "compile": {
-      "include": "../Nanophone.Core.Shared/**/*.cs"
-    },
     "define": [ "LIBLOG_PORTABLE" ],
     "optimize": true,
     "outputName": "Nanophone.Core",
@@ -14,7 +11,7 @@
 
   "frameworks": {
     "net451": {},
-    "netstandard1.3": {
+    "netstandard1.6": {
       "dependencies": {
         "NETStandard.Library": "1.6.0",
         "System.Diagnostics.StackTrace": "4.0.1",
@@ -27,14 +24,6 @@
         "System.Diagnostics.Tools": "4.0.1",
         "System.Linq.Expressions": "4.1.0",
         "System.Text.RegularExpressions": "4.1.0"
-      }
-    },
-    "netcoreapp1.0": {
-      "dependencies": {
-        "Microsoft.NETCore.App": {
-          "type": "platform",
-          "version": "1.0.0"
-        }
       }
     }
   }
