--- a/src/Nanophone.RegistryTenant.WebApi/project.json
+++ b/src/Nanophone.RegistryTenant.WebApi/project.json
@@ -3,9 +3,6 @@
   "version": "1.0.0-*",
 
   "buildOptions": {
-    "compile": {
-      "include": "../Nanophone.RegistryTenant.WebApi.Shared/**/*.cs"
-    },
     "define": [ "LIBLOG_PORTABLE" ],
     "optimize": true,
     "outputName": "Nanophone.RegistryTenant.WebApi",
@@ -13,13 +10,11 @@
   },
 
   "dependencies": {
-    "Nanophone.Core": "1.0.0-*",
-    "Microsoft.AspNetCore.Mvc": "1.0.0",
-    "Microsoft.AspNetCore.Mvc.Core": "1.0.0"
+    "Nanophone.Core": "1.0.0-*"
   },
 
   "frameworks": {
-    "net451": { },
+    "net451": {},
     "netstandard1.6": {
       "dependencies": {
         "NETStandard.Library": "1.6.0",
@@ -32,15 +27,9 @@
         "System.Runtime.InteropServices.RuntimeInformation": "4.0.0",
         "System.Diagnostics.Tools": "4.0.1",
         "System.Linq.Expressions": "4.1.0",
-        "System.Text.RegularExpressions": "4.1.0"
-      }
-    },
-    "netcoreapp1.0": {
-      "dependencies": {
-        "Microsoft.NETCore.App": {
-          "type": "platform",
-          "version": "1.0.0"
-        }
+        "System.Text.RegularExpressions": "4.1.0",
+        "Microsoft.AspNetCore.Mvc": "1.0.0",
+        "Microsoft.AspNetCore.Mvc.Core": "1.0.0"
       }
     }
   }
