--- a/src/Nanophone.RegistryTenant.WebApi/project.json
+++ b/src/Nanophone.RegistryTenant.WebApi/project.json
@@ -14,7 +14,11 @@
   },
 
   "frameworks": {
-    "net451": {},
+    "net451": {
+      "dependencies": {
+        "Microsoft.AspNet.WebApi": "5.2.3"
+      }
+    },
     "netstandard1.6": {
       "dependencies": {
         "NETStandard.Library": "1.6.0",
@@ -29,7 +33,8 @@
         "System.Linq.Expressions": "4.1.0",
         "System.Text.RegularExpressions": "4.1.0",
         "Microsoft.AspNetCore.Mvc": "1.0.0",
-        "Microsoft.AspNetCore.Mvc.Core": "1.0.0"
+        "Microsoft.AspNetCore.Mvc.Core": "1.0.0",
+        "Microsoft.AspNet.Mvc.WebApiCompatShim": "6.0.0-rc1-final" 
       }
     }
   }
